<resources>
    <string name="app_name">场景</string>
    <string name="toolbar_des"> </string>
    <string name="main_tool_name">配送单</string>
    <string name="loading">正在加载中…</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="app_login">登录</string>
    <string name="app_forget_password">忘记密码</string>
    <string name="app_sign">注册</string>
    <string name="app_forget">忘记密码</string>
    <string name="app_forget_commit">提交</string>
    <string name="app_quite_login">退出登录</string>
    <string name="app_user">&#160;&#160;输入手机号</string>
    <string name="app_password">&#160;&#160;输入密码</string>
    <string name="app_sure_password">&#160;&#160;确认新密码</string>
    <string name="app_put_password">&#160;&#160;输入新密码</string>
    <string name="app_put_original_password">&#160;&#160;输入原始密码</string>
    <string name="app_sign_content">&#160;同意会员注册协议和隐私保护政策</string>
    <string name="app_put_password1">&#160;&#160;输入密码</string>
    <string name="app_verity">&#160;&#160;输入验证码</string>
    <string name="order_status">订单已完成</string>
    <string name="app_setting_less">未设置</string>
    <string name="app_choice">请选择</string>
    <string name="address_edit">编辑</string>
    <string name="address_delete">删除</string>
    <string name="user_number">编号：暂无</string>
    <string name="user_status_open">接单中</string>
    <string name="app_shop_list">商铺列表</string>
    <string name="user_status_close">未开工</string>
    <string name="user_notice_center">通知中心</string>
    <string name="user_notice">我的通知</string>
    <string name="user_work_res">工作汇总</string>
    <string name="user_setting_center">设置中心</string>
    <string name="user_person_center">个人设置</string>
    <string name="user_order_detail">订单详情</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="text_verify_code">获取验证码</string>
    <string name="text_take_order">取餐</string>
    <string name="text_complete_order">已送达</string>
    <string name="text_notice_time">2017–04–25 12:40:42</string>
    <string name="text_notice_time_content">分配时间：</string>
    <string name="text_notice_content">您有一份待取餐的订单 请及时处理</string>
    <string name="text_setting_version">V 1.0</string>
    <string name="text_setting_version_des">当前版本</string>
    <string name="text_check_internet">请检查网络</string>
    <string name="text_no_order">当前暂无订单</string>
    <string name="text_wait_try">请稍后重试</string>
    <string name="text_do_success">操作成功</string>
    <string name="dialog_title_hint">温馨提示</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="dialog_password_tips">请输入订单编号的后4位</string>
    <string name="verity_send_success">发送成功</string>
    <string name="sign_up_success">注册成功</string>
    <string name="login_check_permission">定位权限未开启，请重新开启</string>
    <string name="photo_check_permission">相关权限未开启，请重新开启</string>
    <string name="dialog_tip">请与门店营业员确认取餐单号是否正确</string>
    <string name="main_exit">是否确定退出？</string>
    <string name="clean_cache">是否清楚缓存？</string>
    <string name="delete_address">确定要删除该地址吗</string>
    <string name="work_summary">总计</string>
    <string name="person_order">&#160;&#160;我的订单</string>
    <string name="person_address">&#160;&#160;我的地址</string>
    <string name="person_info">&#160;&#160;我的信息</string>
    <string name="comment">评价</string>
    <string name="app_about">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;安徽山市商业运营管理有限公司是国内独立品牌运营商，分为山市文旅，山市文创，山市资源三大BU。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;山市文旅旨在新型文旅商业开发与运营，打造远离世俗喧扰的理想旅居目的地。
        山市文创致力于文化产业创新，树立中国文化消遣品制造商典范。\n
      &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;山市资源是公司自持品牌供应商，带来新场景的体验。</string>
    <string name="app_default_des">未知</string>
    <string name="remind_deliver">已提醒</string>


    <!--相机相关-->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>
    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片…</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>
    <!--支付相关-->
    <string name="pay_success">支付成功!</string>
    <string name="pay_verifying">支付结果确认中</string>
    <string name="pay_fail">支付失败</string>

    <!-- 空界面-->
    <string name="all_order_empty_view">订单为空，赶快去下单吧~</string>
    <string name="nopay_order_empty_view">没有待付款商品，赶快去下单吧~</string>
    <string name="waitdelivery_order_empty_view">没有待收货商品，赶快去下单吧~</string>
    <string name="wait_comment_empty_view">没有待评价商品，赶快去下单吧~</string>
    <string name="couple_no_use_empty_view">卡券为空，赶快去领取吧~</string>
    <string name="couple_used_empty_view">没有已使用卡券</string>
    <string name="couple_expired_empty_view">没有已过期卡券</string>
    <string name="connection_fair_empty_view">市集收藏为空，赶快去收藏吧~</string>
    <string name="connection_products_empty_view">产品收藏为空，赶快去收藏吧~</string>
    <string name="connection_hot_empty_view">热闹收藏为空，赶快去收藏吧~</string>
    <string name="connection_shop_empty_view">商家收藏为空，赶快去收藏吧~</string>
    <string name="connection_street_empty_view">街区收藏为空，赶快去收藏吧~</string>
    <string name="mime_address_empty_view">收货地址为空，赶快去编写吧~</string>

    <!--懒得写了-->

</resources>
