<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
    >

    <include layout="@layout/toolbar_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_72"
        android:gravity="center_vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/dp_20"
            app:srcCompat="@drawable/vector_version"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:text="@string/text_setting_version_des"
            android:textSize="@dimen/sp_16"
            />
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/setting_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_30"
            android:textSize="@dimen/sp_14"
            android:text="@string/text_setting_version"
            />
    </LinearLayout>

    <View
        style="@style/LineH_Fill_Width0_5_ForView"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        />
    <View
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/quite_login"
        style="@style/Login_Button_Style"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/app_quite_login"/>
</LinearLayout>