<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
    >

    <include layout="@layout/toolbar_common"/>

    <android.support.v7.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="6dp"
        card_view:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingEnd="5dp"
            android:paddingStart="15dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/vector_account"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_userName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_user"
                        android:inputType="number"
                        android:textColorHint="@color/nav_item_icon_tint_color"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/vector_password"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_password"
                        android:inputType="number"
                        android:textColorHint="@color/nav_item_icon_tint_color"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/login_identifying_code"
                    style="@style/TextColor_Blue_16_click"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:background="@drawable/item_main_white"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/text_verify_code"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_card_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_40"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/vector_login_icon"
        />

    <Button
        android:id="@+id/login_submit"
        style="@style/Login_Button_Style"
        android:enabled="false"
        android:layout_below="@id/login_card_view"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/app_login"/>
</RelativeLayout>