<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/toolbar_common"/>

    <View style="@style/LineH_Fill_Width1_5_ForView"/>

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forget_phone"
            android:layout_width="175dp"
            android:layout_height="53dp"
            android:textColorHint="#999999"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/forget_phone"
                android:hint="@string/app_user"
                android:inputType="number"
                android:textColor="#999999"
                android:theme="@style/MyEditText2"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forget_identifying_code"
            style="@style/TextColor_green_12_click"
            android:layout_width="92dp"
            android:layout_height="32dp"
            android:background="@drawable/item_main_white"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/text_verify_code"
            />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="275dp"
        android:layout_height="53dp"
        android:textColorHint="#999999"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@mipmap/forget_verity"
            android:hint="@string/app_verity"
            android:textColor="#999999"
            android:inputType="number"
            android:theme="@style/MyEditText2"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forget_next_step"
        style="@style/Login_Button_Style"
        android:layout_width="275dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="81dp"
        android:background="@drawable/button_style_blue2"
        android:text="下一步"
        android:textColor="@color/white"
        />

</LinearLayout>