<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <View style="@style/LineH_Fill_Width_5_ForView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/address_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_default_des"/>

        <TextView
            android:id="@+id/address_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_default_des"/>
    </LinearLayout>

    <TextView
        android:id="@+id/address_address"
        style="@style/TextColor_Grey_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/app_default_des"/>

    <View
        style="@style/LineH_Fill_Width1_ForView"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/address_default"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:button="@drawable/selector_check"/>

        <TextView
            android:id="@+id/address_default_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:text="默认地址"/>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/address_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@mipmap/address_edit"
            android:gravity="center_vertical"
            android:text="@string/address_edit"/>

        <TextView
            android:id="@+id/address_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:drawablePadding="@dimen/dp_5"
            android:drawableStart="@mipmap/address_cycle"
            android:gravity="center_vertical"
            android:text="@string/address_delete"/>
    </LinearLayout>
</LinearLayout>