<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recharge_dialog_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#90000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/bg_white_round"
        android:minHeight="180dip"
        android:orientation="vertical">


        <TextView
            android:id="@+id/recharge_dialog_title"
            style="@style/TextColor_Grey_18"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:gravity="center"
            android:text="@string/dialog_password_tips" />

        <View style="@style/LineH_Yellow_Fill_Width1" />

        <TextView
            android:id="@+id/recharge_dialog_content"
            android:textSize="@dimen/sp_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dp"
            android:text="订单号：12324151231231231"
            android:layout_gravity="center"
            android:gravity="center_vertical" />

        <View style="@style/LineH_Yellow_Fill_Width1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="24dip"
            android:layout_marginLeft="14dip"
            android:layout_marginRight="14dip"
            android:layout_marginTop="24dip"
            android:gravity="center_vertical"
            android:orientation="vertical">

           <com.dispatching.feima.view.customview.MyPasswordView
               android:id="@+id/password_view"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               />
        </LinearLayout>


        <View style="@style/LineH_Fill_Width0_5_ForView" />

        <LinearLayout
            android:id="@+id/recharge_dialog_btnLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44">

            <Button
                android:id="@+id/recharge_dialog_cancel"
                style="@style/TextColor_Blue_16"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_common_left"
                android:text="@string/btn_cancel" />

            <View
                android:id="@+id/recharge_dialog_btnLine"
                style="@style/LineV_Fill_Width0_5_ForView" />

            <Button
                android:id="@+id/recharge_dialog_ok"
                style="@style/TextColor_Blue_16"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_common_right"
                android:text="@string/btn_ok" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>