<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar_common"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="手机号:"
            android:textSize="@dimen/dp_16"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_user"
                android:inputType="number"
                android:textColorHint="@color/nav_item_icon_tint_color"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_verify_code"
                android:inputType="number"
                android:textColorHint="@color/nav_item_icon_tint_color"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/sign_identifying_code"
            style="@style/TextColor_green_12_click"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/item_main_white"
            android:enabled="false"
            android:gravity="center"
            android:maxLines="1"
            android:padding="10dp"
            android:text="@string/text_verify_code"
            android:textColor="@drawable/text_color"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="密码:"
            android:textSize="@dimen/dp_16"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="输入密码"
                android:inputType="textPassword"
                android:textColorHint="@color/nav_item_icon_tint_color"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="新密码:"
            android:textSize="@dimen/dp_16"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_password_again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="输入密码"
                android:inputType="textPassword"
                android:textColorHint="@color/nav_item_icon_tint_color"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/sign"
        style="@style/Login_Button_Style"
        android:layout_width="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_style_blue3"
        android:text="@string/app_sign"
        android:textColor="@color/white"
        />
</LinearLayout>